--- a/primeraApp/src/app/app.component.html
+++ b/primeraApp/src/app/app.component.html
@@ -284,6 +284,7 @@
     </svg>
 
   </div>
+  <app-empleados></app-empleados>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
